# SquidXplorer

./: COMMITS-EXPLAINED.md  README.md  TODOS.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
.spec/: STATE.md
.spec/open/: ima-206.md  ima-211.md  ima-212.md  ima-216.md  ima-217.md  ima-220.md  ima-222.md  ima-223.md  ima-226.md
bench/: __init__.py  __main__.py  dataset.py  metrics.py  report.py  runner.py  sampler.py
bench/adapters/: __init__.py  ashlar.py  base.py  tilefusion.py
bench/drivers/: __init__.py  ashlar_driver.py  tilefusion_driver.py
docs/: DESIGN-STATUS.md  NAUTILUS.md  SCOPE.md  hcs-viewer-quickstart.md  ima-183-eng-review.md  ima-188-eng-review.md  ima-189-eng-review.md  ima-211-eng-review.md  ima-214-viewer-swap.patch  ima-215-eng-review.md  ima-218-eng-review.md  ima-223-225-viewer.patch  ima-228-eng-review.md
scripts/: Setup-Windows.ps1  hcs_viewer_entry.py  measure_overlap.py  smoke_import.py
squidmip/: __init__.py  __main__.py  _acquisition.py  _bench_stitchers.py  _benchmark.py  _budget.py  _channels.py  _cli.py  _command.py  _contrast.py  _coordinates.py  _correction.py  _decon.py  _decon_qc.py  _engine.py  _explore.py  _gui_commands.py  _layer_tree.py  _layers.py  _logpane.py  _logpanel.py  _measure.py  _minerva.py  _mosaic_source.py  _napari3d.py  _napari_pane.py  _napari_view.py  _odon.py  _op_panels.py  _oracle.py  _output.py  _placement.py  _plate.py  _plate_shape.py  _qt_tabs.py  _qtstyle.py  _recipe.py  _region_nav.py  _region_viewer.py  _stitch.py  (+9 more)
tests/: conftest.py  conftest_bench.py  ngff_check.py  test_acquisition.py  test_acquisition_model.py  test_background.py  test_bench_adapters.py  test_bench_cli.py  test_bench_dataset.py  test_bench_metrics.py  test_bench_report.py  test_bench_runner.py  test_bench_sampler.py  test_bench_stitchers.py  test_benchmark.py  test_budget.py  test_channel_bar.py  test_channels.py  test_cli.py  test_command.py  test_contrast.py  test_coordinates.py  test_correction.py  test_decon.py  test_decon_qc.py  test_engine.py  test_explore.py  test_explore_pane.py  test_flatfield.py  test_gui_commands.py  test_integration.py  test_layer_tree.py  test_layers.py  test_logpane.py  test_logpanel.py  test_measure.py  test_measure_overlap.py  test_minerva.py  test_mosaic_source.py  test_napari_pane.py  (+24 more)
tools/: acceptance.py  benchmark.py  commit_gate.sh  decon_qc.py  gates.py  regression_vs_baseline.py  stitch_demo.py  verify_napari_mosaic.py  walkthrough.py
