[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squidmip"
version = "0.1.0"
description = "High-throughput z-stack maximum-intensity projection for Squid well-plate acquisitions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Cephla" }]
dependencies = [
    "numpy>=1.24",
    "tifffile>=2023.1.0",
    "imagecodecs",              # tifffile needs this to decode LZW/compressed Squid TIFFs (real data)
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tensorstore>=0.1.45",
    "zarr>=3.0",                # IMA-231: writes the AnnData-encoded FOV_ROI_table (vlen-utf8
    #                             string arrays in zarr v3), which tensorstore cannot encode.
    #                             anndata itself is NOT a dependency — the encoding is a documented
    #                             on-disk contract and the table is nine columns wide.
    "pillow>=10.0",
    "pydantic-settings>=2.3",   # declarative CLI (IMA-186), same pattern as the stitcher
]

# No tilefusion dependency: IMA-189 ingest is self-contained (see docs/ima-189-eng-review.md).
# tilefusion's OME-zarr writer is vendored (squidmip/_zarr_store.py), not imported, at IMA-184:
# importing tilefusion runs its heavy __init__ (numba/GPU/basicpy). The vendored piece is the
# ~40-line tensorstore store-config wrapper; tensorstore is the only new runtime dep.

[project.optional-dependencies]
# ome-zarr-models: official OME-NGFF v0.5 pydantic schema — validates written plate metadata
# in tests (test-time only; the runtime writer stays lean, no extra runtime dep).
test = ["pytest>=7.0", "ome-zarr-models>=1.7"]
# gui: the MIP tool desktop app. PyQt5 + ndviewer_light (the embedded detail viewer). The headless
# pipeline (reader/projection/engine/output) never imports these, so the CLI installs without them.
gui = [
    "PyQt5>=5.15",
    "ndviewer_light @ git+https://github.com/maragall/ndviewer_light@main",
]

[project.scripts]
squidmip = "squidmip._cli:main"           # headless CLI (IMA-186): MIP a plate from the terminal
squidmip-view = "squidmip._viewer:main"   # the MIP tool desktop app

[tool.hatch.metadata]
allow-direct-references = true   # permit the ndviewer_light @ git+... URL in the [gui] extra

[tool.hatch.build.targets.wheel]
packages = ["squidmip"]

[tool.pytest.ini_options]
markers = [
    "integration: requires the real hongquan dataset on disk (deselect with -m 'not integration')",
]
